correction du code pour le rendre portable