@@ -8,7 +8,7 @@ pipeline {
     environment {
         MAVEN_HOME = '/usr/share/maven'
         PATH = "${env.MAVEN_HOME}/bin:${env.PATH}"
-        DEPLOY_DIR = '/home/deeven/Modèles/demo/target'
+        DEPLOY_DIR = '/home/eyadomaleki/deployement'
         JAR_NAME = 'calculatrice-1.0.0-jar-with-dependencies.jar'
         JAVAFX_LIB = "/opt/javafx-sdk-21.0.2/lib"
 
@@ -87,7 +87,6 @@ pipeline {
               --main-class com.example.CalculatriceApp \
               --icon icon.png \
               --linux-shortcut \
-              --java-options "--module-path $JAVAFX_LIB --add-modules javafx.controls,javafx.fxml" \
               --verbose
         '''
     }
